<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="vitha_app_name">AlQuran</string>
    <string name="search_hint">Search...</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="prefs_alert_message">Settings is changed !</string>
    <string name="enable_settings">Enable Settings</string>
    <string name="settings">Settings</string>

    <string name="from_verse">From Verse :</string>
    <string name="to_verse">To Verse :</string>
    <string name="repeat_for">Repeat For :</string>
    <string name="reciter">Reciter :</string>
    <string name="spin_no_repeat">No Repeat</string>
    <string name="spin_stop_manually">Stop Manually</string>

    <string name="menu_language">Language</string>
    <string name="lang_id">Indonesia</string>
    <string name="lang_en">English</string>
</resources>
