<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:id="@+id/prefsalertTextViewSuraName"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/enable_settings"
			android:layout_width="wrap_content"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/prefsalertCbEnable_settings"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/settings"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:textStyle="bold"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_margin="5dp">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/from_verse"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"/>

			<Spinner
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				android:id="@+id/prefsalertSpinnerFromVerse"
				android:gravity="end"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_margin="5dp">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/to_verse"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"/>

			<Spinner
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				android:id="@+id/prefsalertSpinnerToVerse"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_margin="5dp">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/repeat_for"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"/>

			<Spinner
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				android:id="@+id/prefsalertSpinnerRepeatFor"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_margin="5dp">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/reciter"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"/>

			<Spinner
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				android:id="@+id/prefsalertSpinnerReciter"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>